[package]
name = "cet-hook"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
simplelog = "0.10"
winapi = { version = "0.3", features = ["libloaderapi"] }
cet-class = { path = "../class" }
cet-class-derive = { path = "../class_derive" }
ctor = "0.1"
detour = "0.8"
